samples/_failures_safe/1761319313_8dd2d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18648955.c: In function ‘tokenize’:
./samples/SAFE/__tmp_18648955.c:162:9: error: expected identifier at end of input
  162 |         tokens[token_count].
      |         ^~~~~~
./samples/SAFE/__tmp_18648955.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18648955.c:162:9: error: expected declaration or statement at end of input
